--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,23 +6,23 @@
 </nav>  -->
 
 <!-- formulario + modal (ex. 2) -->
-<div class="container my-4">
+<!-- <div class="container my-4">
   <div class="row d-flex align-items-center">
     <div class="col-6 bg-info bg-opacity-25 rounded-2 p-4">
       <app-formulario />
       <app-modal />
     </div>  
   </div>
-</div>
+</div> -->
 
 <!-- EXERCISES 4 to 6 -->
-<!-- <div class="container">
+<div class="container">
   <div class="row">
     <div class="col order-12">
       <item-card />
     </div>
   </div>
-</div> -->
+</div>
 
 
 <!-- EXERCISE 7 -->
