--- a/src/app/components/item-card/item-card.component.html
+++ b/src/app/components/item-card/item-card.component.html
@@ -1,7 +1,7 @@
 <div class="card border rounded mt-4 mb-4" style="width: 18rem;">
-    <img [src]="personagem.image" class="card-img-top" alt="Logo X-Files">
+    <img [src]="personagem.image" class="card-img-top" alt="Imagem Mulder">
     <div class="card-body">
-      <h4 class="card-title"> {{ personagem.actorName}} </h4>
+      <h4 class="card-title"> {{ personagem.actorName }} </h4>
       <h5 class="m-0 opacity-75">{{ personagem.name}}</h5>
       <p class="card-text">
        {{ personagem.description }}
